# This file is a part of marzer/rt and is subject to the the terms of the MIT license.
# Copyright (c) Mark Gillard <mark.gillard@outlook.com.au>
# See https://github.com/marzer/rt/blob/master/LICENSE for the full license text.
# SPDX-License-Identifier: MIT


exe_cpp_files += files(
	'simple_rasterizer.cpp',
	'mg_scalar_ray_tracer.cpp',
	'null_renderer.cpp',
	'mg_simd_ray_tracer.cpp',
)
