# This file is a part of marzer/rt and is subject to the the terms of the MIT license.
# Copyright (c) Mark Gillard <mark.gillard@outlook.com.au>
# See https://github.com/marzer/rt/blob/master/LICENSE for the full license text.
# SPDX-License-Identifier: MIT


exe_cpp_files += files(
	'rasterizer.cpp',
	'mg_ray_tracer.cpp',
	'null_renderer.cpp',
	'sm_ray_tracer.cpp'
)

exe_extra_files += files(
	'meson.build'
)
